start to set ambush card

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -368,7 +368,7 @@ WBP_ThunderBolt_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrap
 WBP_Heal_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 K2Node_Tunnel=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_SneackAttack_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-WBP_Ambush_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
+WBP_Ambush_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 WBP_Hide_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 ApplyEffect=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 ApplyEffect_3=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
@@ -416,8 +416,10 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -444,8 +446,6 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 OpenAssetsAtExit=/Game/Niagara/NS_Simple.NS_Simple
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Materials/M_TestNiagara.M_TestNiagara
@@ -462,6 +462,7 @@ OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard.WBP_Spea
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment.WBP_Equipment
 OpenAssetsAtExit=/Game/Blueprints/utility/BPF_Utility.BPF_Utility
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_CardHand.WBP_CardHand
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush.WBP_Ambush
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -474,36 +475,36 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem1=/Game/Blueprints/utility/BPF_Utility
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem4=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem9=/Game/Blueprints/BP_PlayerController
-MRUItem10=/Game/Blueprints/Widget/WBP_Frame
-MRUItem11=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem12=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem13=/Game/Blueprints/Widget/WBP_Board
-MRUItem14=/Game/Materials/M_TestNiagara_UI
-MRUItem15=/Game/Materials/M_TestNiagara
-MRUItem16=/Game/Blueprints/Widget/WBP_Card
-MRUItem17=/Game/Niagara/NS_Simple
-MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem19=/Game/Blueprints/STR_FramePositionToMove
-MRUItem20=/Game/Blueprints/STR_CardPosition
-MRUItem21=/Game/Blueprints/Widget/WBP_Board2
-MRUItem22=/Game/Textures/Warrior/EquipmentCard
-MRUItem23=/Game/Textures/Warrior/ProtectionCard
-MRUItem24=/Game/Textures/Warrior/SpearCard
-MRUItem25=/Game/Textures/Warrior/SlashCard
-MRUItem26=/Game/Textures/Warrior/WarriorCard
-MRUItem27=/Game/Blueprints/E_FrameStatut
-MRUItem28=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem29=/Game/Blueprints/Widget/WBP_Line
+MRUItem0=/Game/Blueprints/E_FrameStatut
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem3=/Game/Blueprints/utility/BPF_Utility
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem6=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem9=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem10=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem11=/Game/Blueprints/BP_PlayerController
+MRUItem12=/Game/Blueprints/Widget/WBP_Frame
+MRUItem13=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem14=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem15=/Game/Blueprints/Widget/WBP_Board
+MRUItem16=/Game/Materials/M_TestNiagara_UI
+MRUItem17=/Game/Materials/M_TestNiagara
+MRUItem18=/Game/Blueprints/Widget/WBP_Card
+MRUItem19=/Game/Niagara/NS_Simple
+MRUItem20=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem21=/Game/Blueprints/STR_FramePositionToMove
+MRUItem22=/Game/Blueprints/STR_CardPosition
+MRUItem23=/Game/Blueprints/Widget/WBP_Board2
+MRUItem24=/Game/Textures/Warrior/EquipmentCard
+MRUItem25=/Game/Textures/Warrior/ProtectionCard
+MRUItem26=/Game/Textures/Warrior/SpearCard
+MRUItem27=/Game/Textures/Warrior/SlashCard
+MRUItem28=/Game/Textures/Warrior/WarriorCard
+MRUItem29=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -622,22 +623,22 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/utility
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto/CardEffect/Rogue
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/utility
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Rogue
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto
-ContentBrowserDrawer.JumpMRU=/All/Game/Textures/Warrior
-ContentBrowserDrawer.JumpMRU=/All/Game/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/utility
+ContentBrowserDrawer.JumpMRU=/All/Game/Textures/Warrior
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Wizard
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget/CommonUI
@@ -1822,9 +1823,9 @@ NiagaraSystemWidget="\"Object.Niagara UI Renderer.MaterialRemapList\" \"Object.L
 WBP_Equipment_C=
 WBP_FireBall_C=
 WBP_Heal_C=
-WBP_Ambush_C="\"Object.CardParam\" "
+WBP_Ambush_C="\"Object.PointToCheck\" "
 WBP_SneackAttack_C="\"Object.PointToCheck\" "
-WBP_Hide_C=
+WBP_Hide_C="\"Object.PointToCheck\" "
 WBP_Frame_C=
 WBP_test_C=
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3138,7 +3139,7 @@ RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/
 RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
