--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -368,7 +368,7 @@ WBP_ThunderBolt_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrap
 WBP_Heal_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck
 K2Node_Tunnel=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_SneackAttack_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
-WBP_Ambush_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+WBP_Ambush_C=
 WBP_Hide_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 ApplyEffect=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 ApplyEffect_3=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
@@ -418,9 +418,7 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -434,6 +432,8 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=Niagara
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -461,6 +461,7 @@ OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard.WBP_Spea
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment.WBP_Equipment
 OpenAssetsAtExit=/Game/Blueprints/utility/BPF_Utility.BPF_Utility
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor.WBP_DimensionalDoor
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush.WBP_Ambush
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -473,24 +474,24 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem2=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem3=/Game/Blueprints/utility/BPF_Utility
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem8=/Game/Blueprints/BP_PlayerController
-MRUItem9=/Game/Blueprints/Widget/WBP_Frame
-MRUItem10=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem11=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem12=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem13=/Game/Blueprints/Widget/WBP_Board
-MRUItem14=/Game/Materials/M_TestNiagara_UI
-MRUItem15=/Game/Materials/M_TestNiagara
-MRUItem16=/Game/Blueprints/Widget/WBP_Card
-MRUItem17=/Game/Niagara/NS_Simple
+MRUItem0=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem1=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem2=/Game/Blueprints/utility/BPF_Utility
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem6=/Game/Blueprints/BP_PlayerController
+MRUItem7=/Game/Blueprints/Widget/WBP_Frame
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem9=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem10=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem11=/Game/Blueprints/Widget/WBP_Board
+MRUItem12=/Game/Materials/M_TestNiagara_UI
+MRUItem13=/Game/Materials/M_TestNiagara
+MRUItem14=/Game/Blueprints/Widget/WBP_Card
+MRUItem15=/Game/Niagara/NS_Simple
+MRUItem16=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
 MRUItem18=/Game/Blueprints/E_FrameStatut
 MRUItem19=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
 MRUItem20=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
@@ -1765,15 +1766,15 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
-Object=
+Widget="\"Object.PointToCheck\" "
+Visual="\"Object.PointToCheck\" "
+Object="\"Object.PointToCheck\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Array_C=
-UserWidget=
+UserWidget="\"Object.PointToCheck\" "
 WBP_Card_C=
 SizeBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1802,11 +1803,11 @@ DebugCameraControllerSettings="\"Object.General.CycleViewModes\" "
 CommonHierarchicalScrollBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Render Transform.RenderTransform\" "
 WBP_CommonWidget_C="\"Object.Render Transform.RenderTransform\" "
-CommonUserWidget=
+CommonUserWidget="\"Object.PointToCheck\" "
 WBP_CommonActivableWidget_C="\"Object.Render Transform.RenderTransform\" "
 CommonActivatableWidget="\"Object.Render Transform.RenderTransform\" "
 SafeZone="\"Object.Render Transform.RenderTransform\" "
-WBP_SpellCardTuto_C=
+WBP_SpellCardTuto_C="\"Object.PointToCheck\" "
 WBP_CardHand_C=
 WBP_CardHUD_C=
 BP_PlayerController_C=
@@ -1821,7 +1822,7 @@ NiagaraSystemWidget="\"Object.Niagara UI Renderer.MaterialRemapList\" \"Object.L
 WBP_Equipment_C=
 WBP_FireBall_C=
 WBP_Heal_C=
-WBP_Ambush_C=
+WBP_Ambush_C="\"Object.PointToCheck\" "
 WBP_SneackAttack_C="\"Object.PointToCheck\" "
 WBP_Hide_C="\"Object.PointToCheck\" "
 WBP_Frame_C=
@@ -1917,8 +1918,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3211,7 +3212,6 @@ InstalledPlugins=WMFCodecs
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
