--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -421,18 +421,7 @@ DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -443,11 +432,22 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
 OpenAssetsAtExit=/Game/Niagara/NS_Simple.NS_Simple
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Materials/M_TestNiagara.M_TestNiagara
@@ -460,6 +460,7 @@ OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
 OpenAssetsAtExit=/Game/Materials/MF_CMYKtoRGB.MF_CMYKtoRGB
 OpenAssetsAtExit=/Game/Materials/M_TestComic.M_TestComic
 OpenAssetsAtExit=/Game/Materials/MF_RGBtoCMYK.MF_RGBtoCMYK
+OpenAssetsAtExit=/Game/Materials/MF_PrintLayer.MF_PrintLayer
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -472,36 +473,36 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/MF_CMYKtoRGB
+MRUItem0=/Game/Materials/MF_PrintLayer
 MRUItem1=/Game/Materials/MF_RGBtoCMYK
 MRUItem2=/Game/Materials/M_TestComic
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem6=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem7=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem8=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem9=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
-MRUItem10=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem11=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
-MRUItem12=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem13=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
-MRUItem14=/Game/Blueprints/utility/BPF_Utility
-MRUItem15=/Game/Blueprints/BP_PlayerController
-MRUItem16=/Game/Blueprints/Widget/WBP_Frame
-MRUItem17=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem18=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem19=/Game/Blueprints/Widget/WBP_Board
-MRUItem20=/Game/Materials/M_TestNiagara_UI
-MRUItem21=/Game/Materials/M_TestNiagara
-MRUItem22=/Game/Blueprints/Widget/WBP_Card
-MRUItem23=/Game/Niagara/NS_Simple
-MRUItem24=/Game/Blueprints/Widget/WBP_Board2
-MRUItem25=/Game/Blueprints/BPFL_Card
-MRUItem26=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem27=/Game/Blueprints/E_FrameStatut
-MRUItem28=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem29=/Game/Blueprints/STR_FramePositionToMove
+MRUItem3=/Game/Materials/MF_CMYKtoRGB
+MRUItem4=/Game/Blueprints/BP_PlayerController
+MRUItem5=/Game/Blueprints/Widget/WBP_Frame
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem7=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem8=/Game/Blueprints/Widget/WBP_Board
+MRUItem9=/Game/Materials/M_TestNiagara_UI
+MRUItem10=/Game/Materials/M_TestNiagara
+MRUItem11=/Game/Blueprints/Widget/WBP_Card
+MRUItem12=/Game/Niagara/NS_Simple
+MRUItem13=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem14=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem15=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem18=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem19=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
+MRUItem20=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem21=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem22=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
+MRUItem23=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SpearCard
+MRUItem24=/Game/Blueprints/utility/BPF_Utility
+MRUItem25=/Game/Blueprints/Widget/WBP_Board2
+MRUItem26=/Game/Blueprints/BPFL_Card
+MRUItem27=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem28=/Game/Blueprints/E_FrameStatut
+MRUItem29=/Engine/EditorBlueprintResources/StandardMacros
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1792,6 +1793,10 @@ MaterialExpressionSign.MaterialExpression=True
 MaterialExpressionReroute.MaterialExpression=True
 MaterialExpressionRotator.MaterialExpressionRotator=True
 MaterialExpressionRotator.MaterialExpression=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
+MaterialExpressionLinearInterpolate.MaterialExpressionLinearInterpolate=True
+MaterialExpressionLinearInterpolate.MaterialExpression=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1935,6 +1940,7 @@ SetTarget_4="\"Struct\" "
 /Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor.WBP_DimensionalDoor=0
 /Game/Materials/MF_CMYKtoRGB.MF_CMYKtoRGB=0
 /Game/Materials/MF_RGBtoCMYK.MF_RGBtoCMYK=0
+/Game/Materials/MF_PrintLayer.MF_PrintLayer=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1956,8 +1962,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2001,7 +2007,7 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Map.Map", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [RootWindow]
-ScreenPosition=X=2634.000 Y=121.000
+ScreenPosition=X=139.000 Y=0.000
 WindowSize=X=1280.000 Y=714.000
 InitiallyMaximized=True
 
@@ -3251,6 +3257,7 @@ InstalledPlugins=WMFCodecs
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
