add Function for AI
Add Pathfinding system
Add target system

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -99,7 +99,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=0,Y=4)
+NewWindowPosition=(X=-8,Y=-8)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -126,15 +126,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2554,Y=1352)
+LastSize=(X=1920,Y=1006)
 LastExecutedLaunchDevice=Windows@PC-THEO
 LastExecutedLaunchName=PC-THEO
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=0,Y=4)
-NewWindowWidth=2554
-NewWindowHeight=1352
+MultipleInstancePositions=(X=-8,Y=-8)
+NewWindowWidth=1920
+NewWindowHeight=1006
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -412,12 +412,13 @@ GetNeighbor_1=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.
 WBP_GrippingTapes_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 EnemyMove=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_BreakStruct.PinOptions.ShowPinForProperties
 FillArray_21=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WarriorDeck,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.WizardDeck,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,PropertyWrapper.DefaultValueCategory.RogueDeck,PropertyWrapper.DefaultValueCategory.PointToCheck,PropertyWrapper.DefaultValueCategory.Stats,PropertyWrapper.DefaultValueCategory.IndexToTarget,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WarriorDeck,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.WizardDeck,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.RogueDeck,K2Node_VariableGet.DefaultValueCategory.PointToCheck,K2Node_VariableGet.DefaultValueCategory.IndexToTarget,K2Node_VariableSet.DefaultValueCategory.WarriorDeck,K2Node_BreakStruct.PinOptions.ShowPinForProperties
+MegascansMaterialParentSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,CommonInputSettings.Input.CommonInputPlatformSettings_Windows
 
 [EditorStartup]
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -449,14 +450,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Niagara/NS_Simple.NS_Simple
-OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
-OpenAssetsAtExit=/Game/Materials/M_TestNiagara.M_TestNiagara
-OpenAssetsAtExit=/Game/Materials/M_TestNiagara_UI.M_TestNiagara_UI
-OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
-OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard.WBP_SlashCard
-OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Frame.WBP_Frame
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -1802,7 +1795,7 @@ CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcess
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget=
 Visual=
-Object=
+Object="\"Object\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1867,6 +1860,8 @@ WBP_DimensionalDoor_C="\"Object.PointToCheck\" "
 WBP_GrippingTapes_C="\"Object.PointToCheck\" "
 SetTarget="\"Struct\" \"Struct.IndexToTarget\" "
 SetTarget_4="\"Struct\" "
+WorldPartitionRuntimeHashSet="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
@@ -2825,9 +2820,9 @@ LightMixer.TimeStamp=2024.09.16-12.19.57
 LightMixer.LastCompileMethod=External
 ObjectMixerEditor.TimeStamp=2024.09.16-12.19.57
 ObjectMixerEditor.LastCompileMethod=External
-Bridge.TimeStamp=2024.12.03-07.56.54
+Bridge.TimeStamp=2025.02.15-07.47.02
 Bridge.LastCompileMethod=External
-MegascansPlugin.TimeStamp=2024.12.03-07.56.54
+MegascansPlugin.TimeStamp=2025.02.15-07.47.02
 MegascansPlugin.LastCompileMethod=External
 CmdLinkServer.TimeStamp=2024.09.16-12.19.51
 CmdLinkServer.LastCompileMethod=External
@@ -3173,9 +3168,30 @@ NiagaraUIRenderer.TimeStamp=2025.02.02-14.59.43
 NiagaraUIRenderer.LastCompileMethod=External
 NiagaraUIRendererEditor.TimeStamp=2025.02.02-14.59.44
 NiagaraUIRendererEditor.LastCompileMethod=External
+EOSShared.TimeStamp=2024.08.28-16.44.32
+EOSShared.LastCompileMethod=Unknown
+RD.TimeStamp=2024.09.26-18.57.24
+RD.LastCompileMethod=Unknown
+RiderLink.TimeStamp=2024.09.26-18.59.32
+RiderLink.LastCompileMethod=Unknown
+RiderLogging.TimeStamp=2024.09.26-19.00.44
+RiderLogging.LastCompileMethod=Unknown
+RiderDebuggerSupport.TimeStamp=2024.09.26-19.00.12
+RiderDebuggerSupport.LastCompileMethod=Unknown
+RiderBlueprint.TimeStamp=2024.09.26-19.00.02
+RiderBlueprint.LastCompileMethod=Unknown
+RiderGameControl.TimeStamp=2024.09.26-19.00.30
+RiderGameControl.LastCompileMethod=Unknown
+Fab.TimeStamp=2025.02.17-19.58.14
+Fab.LastCompileMethod=Unknown
+RiderShaderInfo.TimeStamp=2024.09.26-19.00.46
+RiderShaderInfo.LastCompileMethod=Unknown
+RiderLC.TimeStamp=2024.09.26-19.00.38
+RiderLC.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=F:/programme/UE/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
