display cards hovering in initiative

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -421,12 +421,12 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -457,6 +457,7 @@ OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard.WBP_Slas
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt.WBP_ThunderBolt
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -469,25 +470,25 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BP_PlayerController
-MRUItem1=/Game/Blueprints/Widget/WBP_Board
-MRUItem2=/Game/Blueprints/Widget/WBP_Card
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem5=/Game/Blueprints/Widget/WBP_Frame
-MRUItem6=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem7=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem8=/Game/Materials/M_TestNiagara_UI
-MRUItem9=/Game/Materials/M_TestNiagara
-MRUItem10=/Game/Niagara/NS_Simple
-MRUItem11=/Game/Materials/MF_PrintLayer
-MRUItem12=/Game/Materials/MF_RGBtoCMYK
-MRUItem13=/Game/Materials/M_TestComic
-MRUItem14=/Game/Materials/MF_CMYKtoRGB
-MRUItem15=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
-MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem18=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem1=/Game/Blueprints/BP_PlayerController
+MRUItem2=/Game/Blueprints/Widget/WBP_Board
+MRUItem3=/Game/Blueprints/Widget/WBP_Card
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem5=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
+MRUItem6=/Game/Blueprints/Widget/WBP_Frame
+MRUItem7=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem8=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem9=/Game/Materials/M_TestNiagara_UI
+MRUItem10=/Game/Materials/M_TestNiagara
+MRUItem11=/Game/Niagara/NS_Simple
+MRUItem12=/Game/Materials/MF_PrintLayer
+MRUItem13=/Game/Materials/MF_RGBtoCMYK
+MRUItem14=/Game/Materials/M_TestComic
+MRUItem15=/Game/Materials/MF_CMYKtoRGB
+MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_DimensionalDoor
+MRUItem18=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
 MRUItem19=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
 MRUItem20=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_GrippingTapes
 MRUItem21=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
@@ -1801,7 +1802,7 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
 Object="\"Object\" "
@@ -1877,6 +1878,8 @@ K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
+K2Node_BreakStruct="\"Object\" "
+K2Node_StructMemberGet="\"Object\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_CardType.E_CardType=0
